--- a/src/App.css
+++ b/src/App.css
@@ -9,14 +9,14 @@ body{
   margin: 0;
   padding: 0;
 }
-h1{
+h1,h3{
   font-family: 'Kanit';
   font-weight: 500;
   text-align: center;
 }
 .main-text{
   margin-top: 60px;
-  font-size: 50px;
+  font-size: 55px;
 }
 .nav-container{
   width: 100vw;
@@ -43,6 +43,15 @@ h1{
 .nav-container a{
   color: white;
 }
+.line-main{
+  background-color: white;
+  height: 2px;
+  width: 40%;
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 40px;
+}
 .graphdes{
   font-family: 'Kanit';
   margin-top: -20px;
@@ -50,12 +59,12 @@ h1{
 .earnpay-home{
   display: flex;
   justify-content: center;
-  gap: 100px;
+  gap: 40px;
   margin-top: 60px;
 }
 .earn-home,.pay-home{
-  padding-left: 40px;
-  padding-right: 40px;
+  padding-left: 50px;
+  padding-right: 50px;
   padding-top: 20px;
   padding-bottom: 20px;
   border: 2px solid white;
