--- a/src/App.css
+++ b/src/App.css
@@ -67,6 +67,7 @@ h1,h3{
   padding-right: 50px;
   padding-top: 20px;
   padding-bottom: 20px;
+  width: 400px;
   border: 2px solid white;
   border-radius: 15px;
 }
