--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,7 @@ h1,h3{
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 20px;
+  gap: 50px;
 }
 .graphdes{
   font-family: 'Kanit';
@@ -162,8 +162,8 @@ form select{
 }
 .earn-header{
   display: flex;
-  gap: 40px;
-  justify-content: center;
+  width: 50%;
+  justify-content: space-between;
   align-items: center;
   margin-bottom: 50px;
 }
@@ -172,7 +172,12 @@ form select{
   height: 40px;
   font-family:Kanit;
   font-size: 20px;
-  margin-top: 5px;
+}
+.earn-header-text{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
 }
 .regis-container{
   margin-left: auto;
@@ -221,4 +226,17 @@ form select{
 }
 i{
   cursor: pointer;
+}
+.load{
+  margin-top: 350px;
+}
+.fa-trash{
+  color: red;
+}
+.edit{
+  display: flex;
+  gap: 25px;
+}
+.earn-list a {
+  color: black;
 }
