--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@ h1,h3{
 }
 .nav-container{
   height: 100vh;
-  width: 150px;
+  width: 170px;
   background-color: #0186dc;
   position:absolute;
   left: 0;
@@ -41,15 +41,15 @@ h1,h3{
   padding-top: 100px;
   display: flex;
   flex-direction: column;
-  list-style: none;
+  list-style:circle;
   justify-content:space-between;
-  padding-left: 30px;
   height: 100vh;
+  align-items: center;
 }
 .nav-on{
   display: flex;
   flex-direction: column;
-  gap: 60px;
+  gap: 50px;
 }
 .login-out{
   padding-bottom: 20px;
@@ -125,7 +125,12 @@ form{
   margin-left: auto;
   margin-right: auto;
   font-family: 'Kanit';
-  margin-top: 50px;
+  margin-top: 70px;
+  padding: 20px;
+  border-radius: 15px;
+  box-shadow: 6px 6px 31px 4px rgba(0,0,0,0.45);
+  -webkit-box-shadow: 6px 6px 31px 4px rgba(0,0,0,0.45);
+  -moz-box-shadow: 6px 6px 31px 4px rgba(0,0,0,0.45);
 }
 form p{
   font-size: 20px;
@@ -136,6 +141,7 @@ form input{
   height: 50px;
   font-family: 'Kanit';
   font-size: 20px;
+  padding-left: 5px;
 }
 form button{
   width: 500px;
@@ -148,6 +154,7 @@ form select{
 }
 .form-text{
   color: black;
+  font-size: 60px;
 }
 .earn-container{
   display: flex;
@@ -404,7 +411,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   display: flex;
   flex-direction: column;
   gap: 20px;
-  padding-left: 10px;
 }
 .logo img{
   width: 40px;
