--- a/src/App.css
+++ b/src/App.css
@@ -28,34 +28,57 @@ h1,h3{
   color: black;
 }
 .nav-container{
+  display: flex;
+  flex-direction: column;
+}
+.fa-bars{
+  padding-top: 0px;
+  z-index: 999;
+  position: absolute;
+  left: 70px;
+  top: 30px;
+}
+.barActive{
+  color: white;
+}
+.barUnActive{
+  color: black;
+}
+.active{
+  transform: translateX(0);
+}
+.unActive{
+  transform: translateX(-100%);
+}
+.nav{
   height: 100vh;
   width: 170px;
   background-color: #0186dc;
+  top: 0px;
   position:absolute;
   left: 0;
   box-shadow: 6px 6px 31px -7px rgba(0,0,0,0.45);
   -webkit-box-shadow: 6px 6px 31px -7px rgba(0,0,0,0.45);
   -moz-box-shadow: 6px 6px 31px -7px rgba(0,0,0,0.45);
-}
-.nav-container ul{
   padding-top: 100px;
   display: flex;
   flex-direction: column;
   list-style:circle;
   justify-content:space-between;
-  height: 100vh;
   align-items: center;
+  transition: transform 0.2s ease-in-out;
 }
 .nav-on{
   display: flex;
   flex-direction: column;
   gap: 50px;
+  padding-top: 40px;
 }
 .nav-on a li{
   font-size: 20px;
 }
 .login-out{
-  padding-bottom: 20px;
+  padding-bottom: 50px;
 }
 .login-out li{
   font-size: 20px;
